[package]
name = "example-logging"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_logging"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = { path = "../../tsukuyomi" }
izanami = "0.1.0-preview.1"
log = "0.4"
pretty_env_logger = "0.2"
