[package]
name = "example-native-tls"
version = "0.0.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_native_tls"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = { version = "0.4.0-dev", features = ["use-native-tls"] }
native-tls = "0.2"
tokio-tls = "0.2"
failure = "0.1.3"
