[package]
name = "example-native-tls"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_native_tls"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = "0.5.0"
tsukuyomi-server = { version = "0.2.0", features = ["use-native-tls"] }
native-tls = "0.2"
tokio-tls = "0.2"
failure = "0.1.3"
